[package]
name = "iptool"
version = "1.0.0"
authors = ["timmonfette1 <monfette.timothy@gmail.com>"]
repository = "https://github.com/timmonfette1/iptool"
license = "MIT"
description = "Tool for IPv4 and IPv6 related work"

[dependencies]
iptool-core = { path = "iptool-core" }

[workspace]
members = ["iptool-core"]
